# vglx-starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp  scene.cpp  scene.hpp
